k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soap-api
  namespace: soap-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soap-api
  template:
    metadata:
      labels:
        app: soap-api
    spec:
      containers:
      - name: soap-api
        image: image-registry.openshift-image-registry.svc:5000/soap-api/soap-api:latest
        ports:
        - containerPort: 8080
