k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: soap-api
  namespace: soap-api
spec:
  selector:
    app: soap-api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
